--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 .bg {
     background: url('assets/background.jpg') no-repeat center center fixed;
     background-size: cover;
+    overflow-x: hidden;
 }
 
 .transparent {
@@ -10,6 +11,7 @@
 .large {
     font-size: 8vw;
 }
+
 
 .light {
     color: white;
